[metadata]
name = light
author = Felix Pan
author_email = tinylambda@gmail.com
license = MIT
long_description = file: README.rst
requires_python = >=3.9
classifiers =
    Development Status :: 1 - Planning
    Environment :: Other Environment
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
